src/objects/Order_Despatch__c.object
<CustomObject>
    <description>This will contain fields for order despatches</description>
    <fields>
        <fullName>Capacity__c</fullName>
        <formula>Order_Line_Item__r.Capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Despatch_Date__c</fullName>
        <description>This contains the date on which the contains the date</description>
        <label>Despatch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Despatch_Quantity__c</fullName>
        <description>This field contains the quantity that is being despatched</description>
        <label>Despatch Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Despatch_Remarks__c</fullName>
        <description>This will contains the despatch remarks provided by the despatcher</description>
        <label>Despatch Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ERP_Code__c</fullName>
        <description>This will contain the ERP code that is maintained for every order line item</description>
        <formula>Order_Line_Item__r.ERP_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goods_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field  will ascertain whether the distributor has received the goods or not.</description>
        <label>Goods Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <formula>Sukam_Invoice_Details__r.Invoice_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <formula>Sukam_Invoice_Details__r.Invoice_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Order_Line_Item__r.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <description>This contains the net amount for every order despatch line item</description>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item__c</fullName>
        <description>This will contain the order despatch quantity and the remarks for every despatch</description>
        <label>Order Line Item</label>
        <referenceTo>Order_Line_Item__c</referenceTo>
        <relationshipLabel>Order Despatches</relationshipLabel>
        <relationshipName>Order_Despatches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Amount__c</fullName>
        <description>Thsi will cotain all tax values</description>
        <label>Other Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>Order_Line_Item__r.Product_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sukam_Invoice_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will contain the details of Sukam Invoice</description>
        <label>Sukam Invoice Details</label>
        <referenceTo>Dummy_Goods_Inward__c</referenceTo>
        <relationshipLabel>Order Despatches</relationshipLabel>
        <relationshipName>Order_Despatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>This will contain the total amount for every despatch line item</description>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Field__c</fullName>
        <description>This will contain the combination of product category, model &amp; capacity that is unique for every ERP code</description>
        <label>Unique Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order Despatch</label>
    <nameField>
        <label>Despatch No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Despatches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>